--- a/p1.ui
+++ b/p1.ui
@@ -400,6 +400,7 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen_File"/>
+    <addaction name="actionExport_PDF"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -407,6 +408,11 @@
   <action name="actionOpen_File">
    <property name="text">
     <string>Open File</string>
+   </property>
+  </action>
+  <action name="actionExport_PDF">
+   <property name="text">
+    <string>Export PDF</string>
    </property>
   </action>
  </widget>
